--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ body {
 }
 
 .sessao-valor {
-    margin-top: 40px;
-    margin-bottom:35px;
+    margin-top: 30px;
+    margin-bottom:30px;
 }
 
 .card-title-valores {
@@ -194,4 +194,13 @@ body {
     --bs-btn-active-border-color: var(--cor2);
 }
 
+.feedback {
+    background-color: #52CFF4;
+    text-align: center; /* Isso centraliza o conteúdo dentro da div */
+  }
 
+  .social-icons img {
+    max-width: 30px; /* Define a largura máxima para 20px */
+    height: auto;
+    gap: -10px;
+  }
