--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ body {
 }
 
 .horarios {
-    max-width: 400px;
+    min-width: 350px;
+    max-width: 360px;
     margin-top: -5px;
 }
 
@@ -118,12 +119,12 @@ body {
 
 .valores {
     background-color: var(--cor2);
-    gap: 20px;
+    gap: 15px;
 }
 
 .sessao-valor {
-    margin-top: 30px;
-    margin-bottom:30px;
+    /* margin-top: 30px; */
+    /* margin-bottom:30px;  */
 }
 
 .card-title-valores {
