--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
 }
 
 body {
-    margin-left: 30px;
-    margin-right: 30px;
+    /* margin-left: 30px;
+    margin-right: 30px; */
     font-family: var(--fonte-1);
 }
 
