--- a/style.css
+++ b/style.css
@@ -119,12 +119,14 @@ body {
 
 .valores {
     background-color: var(--cor2);
-    gap: 15px;
+    gap: 20px;
 }
 
-.sessao-valor {
-    /* margin-top: 30px; */
-    /* margin-bottom:30px;  */
+.sessao-valor1 {
+
+}
+
+.sessao-valor2 {
 }
 
 .card-title-valores {
@@ -162,8 +164,8 @@ body {
         color: var(--cor3);
         border: none;
         border-radius: 0%;
-        margin-top: -5px; */
-        margin-bottom: 10px;
+        margin-top: -5px;
+        /* margin-bottom: 10px; */
         font-size: 14px; 
 }
 
@@ -201,7 +203,7 @@ body {
 }
 
 .feedback {
-    background-color: #52CFF4;
+    /* background-color: #52CFF4; */
     text-align: center; /* Isso centraliza o conteúdo dentro da div */
   }
 
